Added MySQL server via Docker Compose.

--- a/configuration/local/config/local.properties
+++ b/configuration/local/config/local.properties
@@ -58,12 +58,32 @@ media.apparel-de.https=https://apparel-de.local:9002
 ###########
 # Database Connection strings.
 # HSQLDB
-db.url=jdbc:hsqldb:file:${HYBRIS_DATA_DIR}/hsqldb/mydb;shutdown=true;hsqldb.tx=MVCC
-db.driver=org.hsqldb.jdbcDriver
-db.username=sa
-db.password=
+#db.url=jdbc:hsqldb:file:${HYBRIS_DATA_DIR}/hsqldb/mydb;shutdown=true;hsqldb.tx=MVCC
+#db.driver=org.hsqldb.jdbcDriver
+#db.username=sa
+#db.password=
+#db.tableprefix=
+#hsqldb.usecachedtables=true
+
+# MySQL
+db.url=jdbc:mysql://localhost:3306/quackersdb?useConfigs=maxPerformance&characterEncoding=utf8
+db.driver=com.mysql.jdbc.Driver
+db.username=quackers
+db.password=quackers
+
+# table prefix e.g. if db is shared
 db.tableprefix=
-hsqldb.usecachedtables=true
+
+# other *mandatory* settings
+db.customsessionsql=SET SESSION TRANSACTION ISOLATION LEVEL READ COMMITTED;
+mysql.optional.tabledefs=CHARSET=utf8 COLLATE=utf8_bin
+mysql.tabletype=InnoDB
+
+# MySQL DATETIME handling
+#   from MySQL 5.6.4 -> mysql.allow.fractional.seconds=true
+#   before MySQL 5.6.4 -> mysql.allow.fractional.seconds=false (or omit the property)
+#
+mysql.allow.fractional.seconds=true
 
 
 ###########
