Added some Local Dev Env tweaks

--- a/configuration/local/config/local.properties
+++ b/configuration/local/config/local.properties
@@ -9,6 +9,15 @@ multicountrysampledataaddon.import.active=false
 
 
 ###########
+# SAP license settings.
+# SAP licenses are generated holding customer specific System IDs ( SAPSYSTEM field within the license file ).
+# In order to be able to validate a given SAP license this platform *must* know the correct System ID.
+# As default we've chosen 'CPS' which will only work as long as the customer also chooses 'CPS' as System ID
+# when generating its license!
+# license.sap.sapsystem=CPS
+
+
+###########
 # Context root for the storefront.
 # By default this is set to the extension name.
 # The XXX.webroot controls the actual context path for the extension's web module.
@@ -57,12 +66,15 @@ media.apparel-de.https=https://apparel-de.local:9002
 
 ###########
 # Database Connection strings.
+
+# table prefix e.g. if db is shared
+db.tableprefix=
+
 # HSQLDB
 #db.url=jdbc:hsqldb:file:${HYBRIS_DATA_DIR}/hsqldb/mydb;shutdown=true;hsqldb.tx=MVCC
 #db.driver=org.hsqldb.jdbcDriver
 #db.username=sa
 #db.password=
-#db.tableprefix=
 #hsqldb.usecachedtables=true
 
 # MySQL
@@ -70,9 +82,6 @@ db.url=jdbc:mysql://localhost:3306/quackersdb?useConfigs=maxPerformance&characte
 db.driver=com.mysql.jdbc.Driver
 db.username=quackers
 db.password=quackers
-
-# table prefix e.g. if db is shared
-db.tableprefix=
 
 # other *mandatory* settings
 db.customsessionsql=SET SESSION TRANSACTION ISOLATION LEVEL READ COMMITTED;
@@ -86,8 +95,12 @@ mysql.tabletype=InnoDB
 mysql.allow.fractional.seconds=true
 
 
+
 ###########
 # Development specific settings.
+###########
+
+###########
 # Show debug info in the frontend pages.
 # Suggested values:
 #   Development: true
@@ -114,3 +127,33 @@ qoshopstorefront.testIds.enable=true
 #tomcat.generaloptions=-XX:+UseSerialGC -Xmx2G -ea -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs="%CATALINA_HOME%/lib/endorsed" -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8  -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}"
 #tomcat.wrapper.debugjavaoptions=-XXaltjvm=dcevm -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,address=8000,suspend=n
 #tomcat.wrapper.generaloptions=-XX:+UseSerialGC -Xmx2G -ea -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs="%CATALINA_HOME%/lib/endorsed" -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8  -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}"
+# More aggressive settings.
+#tomcat.generaloptions=-Xmx4G -Xms2G -XX:+PrintGCDateStamps -server -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:ParallelGCThreads=4 -XX:NewRatio=1 -XX:MaxPermSize=512M -XX:CMSInitiatingOccupancyFraction=85 -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Xloggc:${HYBRIS_LOG_DIR}/java_gc.log -ea -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=${tomcat.jmx.port} -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs="%CATALINA_HOME%/lib/endorsed" -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Dlog4j.configuration=log4j_init_tomcat.properties -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}" -Dsun.net.client.defaultConnectTimeout=5000
+#tomcat.wrapper.generaloptions=--Xmx4G -Xms2G -XX:+PrintGCDateStamps -server -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:ParallelGCThreads=4 -XX:NewRatio=1 -XX:MaxPermSize=512M -XX:CMSInitiatingOccupancyFraction=85 -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Xloggc:${HYBRIS_LOG_DIR}/java_gc.log -ea -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=${tomcat.jmx.port} -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs="%CATALINA_HOME%/lib/endorsed" -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Dlog4j.configuration=log4j_init_tomcat.properties -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}" -Dsun.net.client.defaultConnectTimeout=5000
+
+###########
+# Disable the cronjob timer to avoid CPU intensive CronJobs starting while developing (e.g.
+# Solr/Lucene indexing). CronJobs can still be run manually as required.
+cronjob.timertask.loadonstartup=false
+
+###########
+# Disable the task engine to avoid processing tasks that use system resources.
+# ATTENTION: Some processes should, such as order management and sending of emails. Use the task
+# engine. Only turn this off if you know that you really don't need it.
+# task.excluded.cluster.ids=0
+
+###########
+# Increase the number of threads for ImpEx. This will make the system initialization and updates
+# to run much faster. It is recommended to set this to the same or less than the number of CPU cores.  
+impex.import.workers=6
+
+###########
+# Increase the number of threads for Synchronizing Catalogs. This will make the system
+# initialization and updates to run much faster. It is recommended to set this to the same or
+# less than the number of CPU cores.
+catalog.sync.workers=6
+
+###########
+# Increase heap size for system initialization/update and running tests with ant. Ensure there are
+# at least 4 GB available for the OS, IDE and any other memory intensive applications
+standalone.javaoptions=-Xmx4G -XX:MaxPermSize=512M -XX:-AggressiveOpts
