Extracted ENV configuration outside project files (into local-env.properties). Docker Compose: Swapped MySQL port to 3376, to avoid conflict with default installations.

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ hybris/bin/*
 !hybris/bin/custom/
 
 # Absolute path to ignore
-hybris/config/local.properties
+local-env.properties
 
 #IDE files
 **/.idea/*
