--- a/configuration/local/config/local.properties
+++ b/configuration/local/config/local.properties
@@ -78,10 +78,9 @@ db.tableprefix=
 #hsqldb.usecachedtables=true
 
 # MySQL
-db.url=jdbc:mysql://localhost:3306/quackersdb?useConfigs=maxPerformance&characterEncoding=utf8
-db.driver=com.mysql.jdbc.Driver
-db.username=quackers
-db.password=quackers
+db.url=jdbc:mysql://localhost:3376/quackersdb?useConfigs=maxPerformance&characterEncoding=utf8
+db.driver=com.mysql.cj.jdbc.Driver
+# db.username and db.password are to be defined in a (non-tracked by Git) file: local-env.properties
 
 # other *mandatory* settings
 db.customsessionsql=SET SESSION TRANSACTION ISOLATION LEVEL READ COMMITTED;
