--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -5,14 +5,14 @@ services:
   db:
     image: mysql:5.7
     ports:
-      - "3306:3306"
+      - "3376:3306"
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: toor
+      MYSQL_ROOT_PASSWORD: ${DB_ROOTPASS}
       MYSQL_DATABASE: quackersdb
-      MYSQL_USER: quackers
-      MYSQL_PASSWORD: quackers
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - qoshop-dbdata:/var/lib/mysql
     networks:
