--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,6 @@ gensrc
 # Folders to ignore at the root of the repository
 installer/
 build-tools/
-c4c-integration/
-hybris-Mobile-Apps-SDK/
-hybris-ems/
-hybris-sbg/
-licenses/
 
 # Ignore symbolic link
 hybris/config
@@ -26,15 +21,12 @@ hybris/data/
 hybris/licenses/
 hybris/sampleconfigurations/
 
-!hybris/bin/platform/lib/dbdriver/mysql-connector-java-8.0.12.jar
-!hybris/bin/platform/lib/dbdriver/mysql-connector-java-8.0.12.jar-LICENSE
-
 # filter only custom extension
 hybris/bin/*
 !hybris/bin/custom/
 
 # Absolute path to ignore
-local-env.properties
+hybris/config/local.properties
 
 #IDE files
 **/.idea/*
